参数如何传递； log4net的使用

--- a/Advanced.NET6.Project/Views/First/Index.cshtml
+++ b/Advanced.NET6.Project/Views/First/Index.cshtml
@@ -3,5 +3,13 @@
     ViewData["Title"] = "Index";
 }
 
+@model String
+
 <h1>Index</h1>
+
+<h2>User1 = @ViewBag.User1</h2>
+<h2>User2 = @ViewData["User2"]</h2>
+<h2>User3 = @TempData["User3"]</h2>
+<h2>User4 = @Context.Session.GetString("User4")</h2>
+<h2>User5 = @Model</h2>
 
